pi5-arm64/k8s/pi-local-registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker
  namespace: internal-registry
spec:
  selector:
    app: registry

  ports:
    - port: 80
      targetPort: 5000
