pi5-arm64/k8s/pi-local-registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
  namespace: internal-registry
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    
spec:
  ingressClassName: traefik
  rules:
    - host: docker.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker
                port:
                  number: 80
